# SATySFi-lipsum

./: .gitignore  README.md  Satyristes  lipsum.satyg  lipsum.satyh  lipsumjatext.satyg  lipsumtext.satyg  satysfi-lipsum-doc.opam  satysfi-lipsum.opam
doc/: doc-ja.saty
