opam-version: "2.0"
name: "satysfi-lipsum-doc"
version: "0.2.1"
synopsis: "Document: A SATySFi package of dummy text"
description: """Document: A SATySFi package of dummy text."""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-lipsum"
bug-reports: "https://github.com/puripuri2100/SATySFi-lipsum/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-lipsum.git"

depends: [
  "satysfi" {>= "0.0.4" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist"
  "satysfi-lipsum" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "lipsum-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "lipsum-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
